# AileFlow

./: CMakeLists.txt
docs/: architecture.md  b2e-bugfixes.md  limitations.md
kilib/: kl_str.h
res/: AileFlow.rc
src/: AileFlowKiLib.cpp  App.cpp  App.h  Archiver.cpp  B2eBridge.cpp  B2eBridge.h  CompressHelper.h  MainWindow.cpp  MainWindow.h  RarProcess.h  Settings.cpp  Settings.h  SettingsDlg.cpp  SettingsDlg.h  SevenZip.h  SevenZipB2e.cpp  UnrarDll.h  resource.h
